<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DiffDriveControl</string>
    <string name="ip_name">Dest. IP:</string>
    <string name="port_name">Port:</string>
    <string name="cam_stream">Cam Stream</string>
    <string name="touch_x">X:</string>
    <string name="touch_y">Y:</string>
    <string name="touch_y_view">0</string>
    <string name="touch_x_view">0</string>
    <string name="message_center">Message Centre</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_ip_settings">ipSettings</string>
    <string name="activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="ip_setting_label">IP Address : </string>
    <string name="ip_address">192.168.1.10</string>
    <string name="port_comm_setting_label">Port for Controller : </string>
    <string name="comm_port">2362</string>
    <string name="port_open">Open Port</string>
    <string name="port_send">Send</string>

    <string name="open_port">Open Port</string>
    <string name="send_port">Send Port</string>
    <string name="settings_done">Done</string>

    <string name="title_activity_controller">Controller</string>
    <string name="title_disconnected">Disconnected</string>
    <string name="title_connecting">Connecting&#8230;</string>

    <string name="resolution_label">Resolution</string>
    <string name="resolution_times"> x </string>
    <string-array name="resolution_array">
        <item>640x480</item>
        <item>480x640</item>
        <item>320x240</item>
        <item>240x320</item>
        <item>176x144</item>
        <item>144x176</item>
        <item>Custom</item>
    </string-array>

    <string name="port_video_setting_label">Port for Video Feed</string>
    <string name="port_80">80</string>
    <string name="port_video_explanation"> = videofeed port</string>
    <string name="title_imageerror">Error on preparing images</string>
    <string name="address_dot">.</string>

</resources>
