<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/diff_controller_2"
    tools:context=".Controller">


    <TextView
        android:id="@+id/ip_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_name"
        android:textColor="#010101"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/address_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ip_address"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ip_name"
        android:layout_toEndOf="@+id/ip_name" />

    <TextView
        android:id="@+id/touch_x_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_x"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#010101"
        android:layout_alignTop="@+id/message_center"
        android:layout_alignLeft="@+id/ip_name"
        android:layout_alignStart="@+id/ip_name"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/touch_x_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_x_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/touch_y_text"
        android:layout_toEndOf="@+id/touch_y_text" />

    <TextView
        android:id="@+id/port_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port_name"
        android:textColor="#010101"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="start"
        android:layout_alignBaseline="@+id/ip_name"
        android:layout_alignBottom="@+id/ip_name"
        android:layout_toLeftOf="@+id/message_center"
        android:layout_toStartOf="@+id/message_center" />

    <EditText
        android:id="@+id/port_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/comm_port"
        android:layout_alignTop="@+id/port_name"
        android:layout_toRightOf="@+id/port_name"
        android:layout_toEndOf="@+id/port_name" />

    <TextView
        android:id="@+id/touch_y_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_y"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#010101"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/touch_x_text"
        android:layout_alignStart="@+id/touch_x_text" />

    <TextView
        android:id="@+id/touch_y_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_y_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignTop="@+id/touch_x_text"
        android:layout_toRightOf="@+id/touch_x_text"
        android:layout_toEndOf="@+id/touch_x_text" />

    <TextView
        android:id="@+id/message_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_send_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port_send"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_open_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port_open"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button_send_port"
        android:layout_toStartOf="@+id/button_send_port" />

    <!-- SAve for Later
    <TextView
        android:id="@+id/cam_stream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cam_stream"
        android:textColor="#ffffff"
        android:layout_gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <SurfaceView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/surfaceView"
        android:layout_gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="125dp"
        android:layout_marginBottom="37dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="325dp" />
    -->

</RelativeLayout>


